<resources>
    <string name="contactsIconLabel">Contacts</string>
    <string name="contactsFavoritesLabel">Favorites</string>
    <string name="dialerIconLabel">Dialer</string>
    <string name="emergencyDialerIconLabel">Emergency call</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="caller_name">Anil Yadav</string>
    <string name="group">Group</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="ongoing">Current call</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response. Timed out</string>
    <string name="callFailed_server_unreachable">Server not available</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out of network</string>
    <string name="callFailed_server_error">Server error occurred. Try later</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">You cannot make outgoing calls while call barring is on.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_cdma_lockedUntilPowerCycle">Phone locked during rebooting.</string>
    <string name="callFailed_cdma_drop">Call dropped.</string>
    <string name="callFailed_cdma_intercept">Call intercepted.</string>
    <string name="callFailed_cdma_reorder">Reorder.</string>
    <string name="callFailed_cdma_SO_reject">Service Option Reject.</string>
    <string name="callFailed_cdma_retryOrder">Retry limit.</string>
    <string name="callFailed_cdma_accessFailure">Access failed.</string>
    <string name="callFailed_cdma_preempted">Preempted.</string>
    <string name="callFailed_cdma_notEmergency">An incorrect SIM is being used. Only emergency calls can be dialled.</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call lost</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running…</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="menu_speaker">Speaker</string>
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_mute">Mute</string>
    <string name="menu_hold">Hold</string>
    <string name="menu_endCall">End call</string>
    <string name="menu_swapCalls">Swap calls</string>
    <string name="menu_mergeCalls">Merge calls</string>
    <string name="menu_addCall">Add call</string>
    <string name="menu_manageConference">Manage conference call</string>
    <string name="menu_showDialpad">Show dialpad</string>
    <string name="menu_hideDialpad">Hide dialpad</string>
    <string name="menu_answerAndHold">"Hold current call
&amp; answer"</string>
    <string name="menu_answerAndEnd">"End current call
&amp; answer"</string>
    <string name="ok">OK</string>
    <string name="menuButtonHint">Press Menu for call options.</string>
    <string name="menuButtonKeyboardDialHint">"Press Menu for call options  •  Use keyboard to dial"</string>
    <string name="menu_answer">Answer</string>
    <string name="menu_ignore">Ignore</string>
    <string name="wait_prompt_str">"Send the following tones?
"</string>
    <string name="pause_prompt_str">"Sending Tones
"</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace the wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="dialer_emptyListWorking">Loading…</string>
    <string name="enterPin">Enter PIN to unlock SIM card</string>
    <string name="pinUnlocked">SIM unlocked</string>
    <string name="enterNewPin">New SIM PIN</string>
    <string name="verifyNewPin">Re-type new PIN</string>
    <string name="verifyFailed">SIM PINs you typed do not match. Please try again.</string>
    <string name="enterPuk">Enter PUK to unlock SIM card</string>
    <string name="badPuk">Incorrect PUK</string>
    <string name="buttonTxtContinue">Continue</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking…</string>
    <string name="label_ndp">Enter Network Lock Control Key</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting network unlock…</string>
    <string name="unlock_failed">Network unlock request unsuccessful.</string>
    <string name="unlock_success">Network unlock successful.</string>
    <string name="number_of_attempts_left">Number of attempts remaining:</string>
    <string name="networkmessage_lock">Network unlock PIN number is entered incorrectly. Contact your Service Provider</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="settings_label">Network settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="voicemail_abbreviated">VM:</string>
    <string name="networks">Network operators</string>
    <string name="call_settings">Call</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="sum_gsm_call_settings">Additional call settings only for GSM</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelNwService">Network service settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
    <string name="sum_show_caller_id">Number displayed in outgoing calls</string>
    <string name="sum_default_caller_id">Use default operator settings to display my number in outgoing calls</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_enabled_indicator">Forwarding all calls</string>
    <string name="sum_cfu_enabled">Forwarding to %s</string>
    <string name="sum_cfu_enabled_no_number">Phone number not available</string>
    <string name="sum_cfu_disabled">Disabled</string>
    <string name="labelCFB">Forward when busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="sum_cfb_enabled">Forwarding to %s</string>
    <string name="sum_cfb_disabled">Disabled</string>
    <string name="disable_cfb_forbidden">Unable to deactivate call diverting when busy. Unsupported by operator</string>
    <string name="labelCFNRy">Forward when unanswered</string>
    <string name="messageCFNRy">Number when unanswered</string>
    <string name="sum_cfnry_enabled">Forwarding to %s</string>
    <string name="sum_cfnry_disabled">Disabled</string>
    <string name="disable_cfnry_forbidden">Unable to deactivate call diverting for unanswered calls. Unsupported by operator</string>
    <string name="labelCFNRc">Forward when unreachable</string>
    <string name="messageCFNRc">Number when unreachable</string>
    <string name="sum_cfnrc_enabled">Forwarding to %s</string>
    <string name="sum_cfnrc_disabled">Disabled</string>
    <string name="disable_cfnrc_forbidden">Unable to deactivate call diverting when phone is unreachable. Unsupported by operator</string>
    <string name="updating_title">Call settings</string>
    <string name="error_updating_title">Error</string>
    <string name="reading_settings">Reading settings…</string>
    <string name="updating_settings">Updating settings…</string>
    <string name="reverting_settings">Reverting settings…</string>
    <string name="response_error">Unexpected response from network.</string>
    <string name="exception_error">Network or SIM card error.</string>
    <string name="fdn_only_error">Operations only allowed on fixed dialing numbers.</string>
    <string name="radio_off_error">Please turn on the radio before viewing these settings.</string>
    <string name="close_dialog">OK</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="change_num">Update</string>
    <string name="vm_save_number">Save voicemail number</string>
    <string name="vm_changed">Voicemail number changed.</string>
    <string name="vm_change_failed">Voicemail number change unsuccessful.</string>
    <string name="fw_change_failed">Forwarding number change failed</string>
    <string name="fw_get_in_vm_failed">Change to new provider?</string>
    <string name="no_change">No changes were made.</string>
    <string name="sum_voicemail_choose_provider">Select voicemail service</string>
    <string name="voicemail_default">My carrier</string>
    <string name="voicemail_default_vnz">Vodafone NZ</string>
    <string name="mobile_networks">Mobile network settings</string>
    <string name="label_available">Available networks</string>
    <string name="load_networks_progress">Searching…</string>
    <string name="empty_networks_list">No networks found.</string>
    <string name="search_networks">Search networks</string>
    <string name="network_query_error">Error while searching for networks.</string>
    <string name="end_call">End call</string>
    <string name="mute">Mute</string>
    <string name="switch_cam">Switch camera</string>
    <string name="stop">Stop</string>
    <string name="prepareOtherVideo">Preparing display image...</string>
    <string name="preferred_networks_index">Network Index</string>
    <string name="preferred_networks_name">Network name</string>
    <string name="preferred_networks_id">Network ID</string>
    <string name="preferred_networks_act_mode">ACT Mode</string>
    <string name="preferred_networks_act_gsm">GSM ACT</string>
    <string name="preferred_networks_act_gsm_compact">GSM Compact ACT</string>
    <string name="preferred_networks_act_utran">UTRAN ACT</string>
</resources>